<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="general">General</string>
    <string name="other">Other</string>
    <string name="calibrate">Calibrate</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="result">Result</string>
    <string name="pleaseWait">Please wait…</string>
    <string name="language">Language</string>
    <string name="notSupported">Not Supported</string>
    <string name="cameraBusy">Camera Busy</string>
    <string name="analyze">Analyse</string>
    <!-- Tests -->
    <string name="aluminum">.</string>
    <string name="arsenic_iii">.</string>
    <string name="chromium">.</string>
    <string name="copper">.</string>
    <string name="dissolved_oxygen">.</string>
    <string name="fluoride">.</string>
    <string name="fluoride_high_range">.</string>
    <string name="free_chlorine">.</string>
    <string name="hydrogen_peroxide">.</string>
    <string name="nitrate">.</string>
    <string name="ph">.</string>
    <string name="phosphate">.</string>
    <string name="sulphate">.</string>
    <string name="total_iron">.</string>
    <string name="chlorophyll_a">.</string>
    <string name="zinc">.</string>
    <string name="organic_carbon">.</string>
    <string name="potassium">.</string>
    <string name="available_boron">.</string>
    <string name="available_iron">.</string>
    <string name="available_nitrogen">.</string>
    <string name="available_phosphorous">.</string>
    <string name="available_potassium">.</string>
    <string name="alkalinity">.</string>
    <string name="ammonia">.</string>
    <string name="nitrite">.</string>
    <string name="blood_sugar">.</string>
    <string name="organophosphate">.</string>
    <string name="up_to_with_dilution">Up to %s with dilution</string>

    <!--Calibration Screen-->
    <string name="calibrationIsInvalid">Invalid calibration</string>
    <string name="tryRecalibrating">Try recalibrating</string>
    <string name="reagentExpiry">Reagent expiry</string>
    <string name="expired">Expired</string>
    <string name="couldNotCalibrate">Could not calibrate</string>

    <!--Dilution Selection Dialog-->
    <string name="dilution">Dilution</string>
    <string name="selectDilution">Select amount of dilution</string>
    <plurals name="dilutions">
        <item quantity="one">No Dilution</item>
        <item quantity="many">%1$d Times Dilution</item>
        <item quantity="other">%1$d Times Dilution</item>
    </plurals>
    <string name="noDilution">No Dilution</string>
    <string name="timesDilution" tools:ignore="PluralsCandidate">%1$d Times Dilution</string>
    <string name="customDilution">Custom Dilution</string>
    <string name="enterDilutionFactor">Enter Dilution Factor</string>
    <string name="testWithDilution">Test with Dilution</string>

    <!--Test Progress Screen-->
    <string name="placeDevice">Place device face down on a flat surface</string>
    <string name="errorTestInterrupted">Test was interrupted.</string>
    <string name="doNotMoveDeviceDuringTest">Do not move the phone during the test</string>
    <string name="errorTestFailed">Colour does not match any calibrated colours.</string>
    <string name="chamberNotFound">Could not complete test.</string>
    <string name="checkChamberPlacement">Check that the chamber has been placed correctly.</string>

    <!--Result Screen-->
    <string name="acceptResult">Accept Result</string>
    <string name="highLevelsFound">High level of contamination</string>
    <string name="tryWithDilutedSample" tools:ignore="PluralsCandidate">Try again with %1$d times dilution</string>

    <!--Alerts-->
    <string name="cannotStartTest">Cannot start test</string>
    <string name="errorTestNotAvailable">Requested test is not available</string>
    <string name="pleaseContactSupport">Please contact technical support</string>

    <!--Permission-->
    <string name="cameraPermissions">Camera permissions are required</string>
    <string name="cameraAndLocationPermissions">Camera &amp; location permissions are required</string>

    <string name="bc_dilution_1">Rinse the mixing chamber with deionised water.</string>
    <string name="bc_dilution_2">Empty the test chamber and fill it with the deionised water.</string>
    <string name="bc_dilution_3">Invert the lid and fit it over the inner chamber, aligning the bump on the cap and the inner chamber of the test chamber.</string>
    <string name="bc_dilution_4">Some excess water will spill into the overflow space. Hold tightly as shown and throw out the excess water.</string>
    <string name="bc_dilution_5">Next remove the cap and pour the deionised water into the mixing chamber. For <b>two times dilution</b> add one measure of deionised water and one measure of your sample. For <b>five times dilution</b> add four measures of deionised water and one measure of your sample.</string>
    <string name="bc_dilution_6">Shake the mixing chamber so the deionised water and sample mix thoroughly. Pour the mixture into the Test Chamber. Use this mixture for your measurement.</string>

    <string name="c_add_reagent">Add reagent to the measured sample.</string>
    <string name="c_add_reagent_a">Add <b>Reagent A</b> to the measured sample.</string>
    <string name="c_add_5_drops_a">Add <b>5 drops of Reagent A</b> to the measured sample.</string>
    <string name="c_add_reagent_b">Add <b>Reagent B</b> to the solution.</string>
    <string name="c_add_10_drops_b">Add <b>10 drops of Reagent B</b> to the measured sample.</string>
    <string name="c_add_5_drops">Add <b>5 drops</b> of the reagent to the measured sample.</string>
    <string name="c_add_10_drops">Add <b>10 drops</b> of pH reagent to the measured sample.</string>

    <string name="c_measure_2ml">Measure <b>2 ml</b> of the sample with the measuring tube. Add <b>8 ml of distilled water</b> to bring the total volume up to 10 ml.</string>
    <string name="c_normal_rinse_2ml">Rinse the measuring tube and the test cuvette <b>twice</b> with <b>distilled water</b> to remove any traces of previous solutions.</string>
    <string name="c_normal_rinse">Rinse the empty cuvette and measuring tube <b>twice</b> with the sample to remove any traces of previous solutions.</string>
    <string name="c_normal_measure"><b>Measure %sampleQuantity ml</b> of the sample with the measuring tube.</string>
    <string name="c_open_reagent">Open the vial of <b>Reagent A</b>.</string>
    <string name="c_shake">Close the lid of the measuring tube and shake it to ensure proper mixing of the reagent and sample.</string>
    <string name="c_pour">Pour the contents of the mixing tube into the provided cuvette.</string>
    <string name="c_close">Close the lid, wipe any excess water and fit the cuvette into the pipe.</string>
    <string name="c_press_place_phone">Press the start button below and then place the phone face down, and use the sticker to help center the cuvette over the camera.</string>
    <string name="c_place_phone">Accept the screen pin alert. Then place the phone face down, and use the sticker to help center the cuvette over the camera.</string>
    <string name="c_start_timer">Have you done this, this and this? Okay now start the timer.</string>
    <string name="c_empty">Empty contents of the cuvette and rinse it</string>
    <string name="c_dilution_1">Rinse the measuring tube and the test cuvette <b>twice</b> with <b>distilled water</b> to remove any traces of previous solutions.</string>
    <string name="c_dilution_2">Measure <b>%dilutedSampleQty ml</b> of the sample</string>
    <string name="c_dilution_3">Add <b>%distilledQty ml of distilled water</b> to the sample to bring the total volume up to <b>%sampleQuantity ml</b></string>

    <string name="c_add_reagents">Add 1 vial of Aluminum <b>reagent A</b>, followed by Aluminum <b>reagent B</b> and then Aluminum <b>reagent C</b> to the measured solution.</string>
    <string name="c_add_tablets">Add one tablet each of <b>reagent A and B</b> into the measuring tube.</string>

    <string name="c_ar_add_reagent_1">Add <b>1 drop of acid</b> from the dropper bottle.</string>
    <string name="c_ar_add_reagent_2">Add <b>1 drop of ammonia</b> from the dropper bottle.</string>
    <string name="c_ar_add_reagent_3">Add <b>1 spoon of Calcium Carbonate</b> to the solution.</string>
    <string name="c_ar_add_reagent_4">Add <b>10 drops of Calcium Chloride</b> to the solution.</string>
    <string name="c_ar_add_reagents">Add <b>1 vial each</b> of Arsenic reagent A, B and C to the measured solution.</string>
    <string name="c_ar_shake_to_mix">Close the lid of the measuring tube and shake it to ensure proper mixing.</string>
    <string name="c_ar_solution_turns_yellow"><b>Note:</b> If there is iron, the solution will turn yellowish.</string>
    <string name="c_ar_fold_filter">Fold the filter paper as shown.</string>
    <string name="c_ar_place_filter">Place it in the funnel as shown.</string>
    <string name="c_place_filter">Place it in the funnel.</string>
    <string name="c_place_another_filter">Take another filter paper and place it in the funnel.</string>
    <string name="c_ar_filter_solution">Filter the solution through the filter paper, into the <b>10 ml</b> measuring cylinder.</string>
    <string name="c_filter_sample">Filter approximately <b>100 ml</b> of sample through the filter paper.</string>
    <string name="c_discard_filter_sample">The filtered sample can be discarded, but keep the filter paper for the next step.</string>
    <string name="c_unfold_filter">Remove the filter paper, unfold it and place it in the measuring tube.</string>
    <string name="c_add_extraction_solution">Add <b>2 ml</b> of extraction solution to the filter paper in the measuring tube.</string>
    <string name="c_filter_sample_cuvette">Filter the extracted sample through the funnel, directly into the borosil cuvette.</string>

    <string name="c_po_add_reagent_drops">Add <b>3 drops</b> of Phosphate reagent B to the solution.</string>
    <string name="c_cr_add_reagent_drops">Add <b>5 drops</b> of Reagent A to the measured sample.</string>
    <string name="c_so_add_reagent">Add <b>half a spoon</b> of <b>Sulphate B</b> to the solution.</string>

    <string name="c_crush_sample">Continue crushing of the sample util the greenish colour disappears from the filter - this could take up to 5 minutes.</string>
    <string name="c_add_extraction_10ml">Add more extraction solution until it reaches the <b>10 ml</b> mark.</string>

    <!-- About Screen -->
    <string name="copyrightMessage">Copyright © ffem</string>
    <string name="legalInformation">Legal Information</string>

    <!--Messages-->
    <string name="phoneDoesNotSupport">This feature is not supported by this device</string>
    <string name="cannotUseCamera">Can\'t use camera. Make sure flashlight is off and close any apps that may be using the camera</string>
    <string name="cameraNotAvailable">Camera not available</string>
    <string name="cameraRequired">A back facing camera is required for colorimetric analysis</string>
    <string name="tryRestarting">If the problem continues, restart this device</string>
    <string name="cannotCalibrate">Cannot calibrate</string>
    <string name="errorCameraFlashRequired">A camera flash was not found on this device</string>
    <string name="errorCalibrationIncomplete">Calibration for %1$s is incomplete</string>
    <string name="doYouWantToCalibrate">Do you want to calibrate now?</string>

    <!--Update-->
    <string name="update">Update</string>
    <string name="updateAvailable">New version available. Update to get the most out of your app</string>
    <string name="remindLater">Remind later</string>
    <string name="continue_send">Continue</string>

</resources>