...
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/button_instructions"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <Button
                android:id="@+id/button_prepare"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:enabled="true"
                android:minWidth="230dp"
                android:text="@string/prepare_test"
                android:theme="?primaryButtonStyle" />

            <Button
                android:id="@+id/button_prepare_v2"
                style="@style/Button"
                android:layout_width="wrap_content"
...
