...
                android:textSize="16sp"
                tools:text="22-Dec-2015" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEditCalibration"
            style="@style/floating_action_button_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/layoutTitleBar"
            android:layout_alignParentEnd="true"
            android:onClick="onEditCalibration"
...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textCalibrationError"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/calibrationList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/layoutButtons"
                app:layoutManager="LinearLayoutManager"
                tools:listitem="@layout/item_calibration" />

...
